platform/manifests/overlays/dev/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: candle
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
